@@ -14,6 +14,7 @@ the popular Auto IRC bot.
 In this alpha5 release, we have added:
 
 * LinkTitle module for returning the page title of links sent to a channel.
+* Added core command MODLIST.
 
 Bug fixes:
 
